# Edge-VLM-Bench

./: .dockerignore  Dockerfile  LICENSE  README.md  bench.py  pyproject.toml
.github/workflows/: ci.yml
edge_vlm_bench/: benchmark.py  cli.py  config.py
edge_vlm_bench/datasets/: base.py  coco.py  custom.py  factory.py
edge_vlm_bench/devices/: android.py  base.py  factory.py  jetson.py  macos.py  rk3588.py
edge_vlm_bench/metrics/: accuracy.py  latency.py
edge_vlm_bench/models/: base.py  dummy.py  factory.py  sam.py  vlm.py  yolo.py
edge_vlm_bench/reports/: writer.py
examples/: custom_manifest.json  demo_config.yaml  rtx6000_torch_config.yaml
tests/: test_demo_run.py  test_latency.py
